--- a/HelloWorld/app/src/main/res/layout/activity_main_login.xml
+++ b/HelloWorld/app/src/main/res/layout/activity_main_login.xml
@@ -28,6 +28,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailText" />
+        app:layout_constraintTop_toBottomOf="@+id/reciveEmailText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
