--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,11 +9,21 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_categories" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_store" />
+
+    <item
+        android:id="@+id/navigation_store"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_bets" />
+
+    <item
+        android:id="@+id/navigation_more"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_more" />
 
 </menu>
