--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,17 +7,17 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_categories"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_categories" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_store"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_store" />
 
     <item
-        android:id="@+id/navigation_store"
+        android:id="@+id/navigation_bets"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_bets" />
 
