--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,25 +13,25 @@
 
     <fragment
         android:id="@+id/navigation_categories"
-        android:name="com.ipca.formulaworld.ui.dashboard.DashboardFragment"
+        android:name="com.ipca.formulaworld.ui.categories.CategoriesFragment"
         android:label="@string/title_categories"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_categories" />
 
     <fragment
         android:id="@+id/navigation_store"
-        android:name="com.ipca.formulaworld.ui.notifications.NotificationsFragment"
+        android:name="com.ipca.formulaworld.ui.store.StoreFragment"
         android:label="@string/title_store"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_store" />
 
     <fragment
         android:id="@+id/navigation_bets"
-        android:name="com.ipca.formulaworld.ui.notifications.NotificationsFragment"
+        android:name="com.ipca.formulaworld.ui.bets.BetsFragment"
         android:label="@string/title_bets"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_bets" />
 
     <fragment
         android:id="@+id/navigation_more"
-        android:name="com.ipca.formulaworld.ui.notifications.NotificationsFragment"
+        android:name="com.ipca.formulaworld.ui.more.MoreFragment"
         android:label="@string/title_more"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_more" />
 </navigation>
