--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,27 +3,27 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_categories"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/bet"
         android:title="@string/title_categories" />
 
     <item
         android:id="@+id/navigation_store"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/store"
         android:title="@string/title_store" />
 
     <item
         android:id="@+id/navigation_bets"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/bet"
         android:title="@string/title_bets" />
 
     <item
         android:id="@+id/navigation_more"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/more"
         android:title="@string/title_more" />
 
 </menu>
