--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="aqua_blue">#C0EAFD</color>
     <color name="light_blue">#0090D0</color>
     <color name="dark_blue">#00314D</color>
+    <color name="grey">#9A9A9A</color>
 </resources>
