--- a/app/src/main/res/layout/fragment_classification.xml
+++ b/app/src/main/res/layout/fragment_classification.xml
@@ -3,14 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.categories.CategoriesFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-
+    tools:context=".ui.classification.ClassificationFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categories_RecycleView"
+        android:id="@+id/classification_RecycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
