--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent" >
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/signIn_imageView"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginTop="80dp"
@@ -21,28 +21,28 @@
             android:src="@drawable/ic_cup"/>
 
         <EditText
-            android:id="@+id/emailEditText"
+            android:id="@+id/signIn_emailEditText"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/maven_pro_medium"
-            android:hint="E-mail"
+            android:hint="@string/e_mail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/signIn_imageView" />
 
         <EditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/signIn_passwordEditText"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Password"
+            android:hint="@string/password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
+            app:layout_constraintTop_toBottomOf="@+id/signIn_emailEditText" />
 
         <Button
-            android:id="@+id/submitButton"
+            android:id="@+id/signIn_submitButton"
             android:layout_width="200dp"
             android:layout_height="60dp"
             android:layout_marginTop="24dp"
@@ -53,8 +53,8 @@
             android:textColor="@color/dark_blue"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
-            android:textSize="18dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/signIn_passwordEditText"
+            android:textSize="18sp"/>
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/google_login_btn"
@@ -62,12 +62,22 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submitButton"
+            app:layout_constraintTop_toBottomOf="@+id/signIn_submitButton"
             android:layout_marginTop="20dp"
             />
 
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/google_login_btn"
+            android:layout_marginTop="20dp" />
+
         <Button
-            android:id="@+id/registerLink"
+            android:id="@+id/signIn_registerLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -78,7 +88,7 @@
             android:textColor="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/google_login_btn" />
+            app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
