Update resources: fragments, colors and strings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light_blue">#0090D0</color>
     <color name="dark_blue">#00314D</color>
     <color name="grey">#9A9A9A</color>
+    <color name="alice_blue">#F9FAFC</color>
 </resources>
