--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.categories.CategoriesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categories_RecycleView"
+    <ListView
+        android:id="@+id/categories_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
