--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,9 @@
 
     <color name="aqua_blue">#C0EAFD</color>
     <color name="light_blue">#0090D0</color>
+    <color name="dark_cyan_blue">#254F67</color>
     <color name="dark_blue">#00314D</color>
     <color name="grey">#9A9A9A</color>
     <color name="alice_blue">#F9FAFC</color>
+    <color name="orange">#FC9E3C</color>
 </resources>
