--- a/app/src/main/res/layout/fragment_classification.xml
+++ b/app/src/main/res/layout/fragment_classification.xml
@@ -18,23 +18,24 @@
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:drawable="@drawable/edge_corners"
             android:backgroundTint="@color/tab_button_background_color"
-            android:textColor="@color/tab_button_text_color" />
+            android:textColor="@color/tab_button_text_color"
+            android:text="@string/pilots"/>
         <Button
             android:id="@+id/classification_teams_button"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:drawable="@drawable/tab_button"
             android:backgroundTint="@color/tab_button_background_color"
-            android:textColor="@color/tab_button_text_color" />
+            android:textColor="@color/tab_button_text_color"
+            android:text="@string/teams"/>
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/classification_RecycleView"
+        android:id="@+id/classification_pilots_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
 
 </LinearLayout>
