--- a/app/src/main/res/layout/list_item_3.xml
+++ b/app/src/main/res/layout/list_item_3.xml
@@ -2,42 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:background="@color/white"
     >
 
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/list_item_3_circle_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:elevation="2dp"
+        android:layout_marginStart="40dp"
+        android:background="@drawable/circle_img"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/list_item_3_circle_photo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:elevation="2dp"
-            android:background="@color/white"
-            />
+    <TextView
+        android:id="@+id/list_item_3_title"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:maxLines="1"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:layout_marginStart="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_item_3_circle_photo"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/list_item_3_title"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:elevation="2dp"
-            android:textAlignment="center"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
-
-
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
