Update bets, add list of players

--- a/app/src/main/res/layout/fragment_bets_place.xml
+++ b/app/src/main/res/layout/fragment_bets_place.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
             android:layout_marginStart="30dp"
+            android:textStyle="bold"
             android:text=""
             android:textSize="15sp"
             tools:ignore="MissingConstraints,RtlHardcoded" />
@@ -51,8 +52,8 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp"
-        android:text="Saldo"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textViewValueBalance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:layout_marginBottom="40dp"
-        android:text="1500"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewAmount"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,8 +78,8 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp"
-        android:text="Montante"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/editAmount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +108,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp"
-        android:text="Ganhos Potenciais"
+        android:textStyle="bold"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewValueGains"
         app:layout_constraintEnd_toEndOf="parent"
