--- a/app/src/main/res/layout/fragment_list_players_bets.xml
+++ b/app/src/main/res/layout/fragment_list_players_bets.xml
@@ -4,26 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ipca.formulaworld.ui.bets.BetsListFragment"
+    tools:context="com.ipca.formulaworld.ui.bets.BetsPlayersListFragment"
     android:orientation="vertical">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        tools:ignore="MissingConstraints" />
-
-    <FrameLayout
-        android:id="@+id/fragment_list_odds"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-   <!--
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="parent"/>
-        -->
+
 </LinearLayout>
