--- a/app/src/main/res/layout/list_item_6.xml
+++ b/app/src/main/res/layout/list_item_6.xml
@@ -11,7 +11,8 @@
         app:cardBackgroundColor="@color/white"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        app:cardElevation="5dp"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="8dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
 
@@ -20,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left|center"
-            android:textSize="17sp"
+            android:textSize="16sp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="20dp"
@@ -32,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center"
-            android:textSize="17sp"
+            android:textSize="16sp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="10dp"
