Fix: News list styles

--- a/app/src/main/res/layout/list_news.xml
+++ b/app/src/main/res/layout/list_news.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:layout_editor_absoluteX="1dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
     app:cardPreventCornerOverlap="true"
@@ -14,13 +13,12 @@
         android:padding="14dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:alpha="0.8">
+        android:background="@color/white" >
 
         <ImageView
             android:id="@+id/list_news_photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,12 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:ellipsize="end"
             android:fontFamily="@font/maven_pro_medium"
             android:maxWidth="250dp"
             android:singleLine="true"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="@color/dark_blue"
+            android:ellipsize="end"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/list_news_photo"
@@ -46,10 +45,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/maven_pro_medium"
+            android:fontFamily="@font/maven_pro"
             android:maxWidth="200dp"
-            android:maxLines="4"
-            android:textSize="18sp"
+            android:maxLines="3"
+            android:textSize="16sp"
+            android:textColor="@color/dark_blue"
+            android:ellipsize="end"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/list_news_photo"
@@ -57,12 +58,13 @@
 
         <Button
             android:id="@+id/list_news_details"
-            android:layout_width="98dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:text="@string/more_button"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@color/light_blue"
+            android:fontFamily="@font/maven_pro_medium"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/list_news_description" />
