--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -9,6 +9,7 @@
         android:id="@+id/news_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="15dp" />
+        android:paddingHorizontal="15dp"
+        android:paddingTop="15dp"/>
 
 </FrameLayout>
