--- a/app/src/main/res/layout/list_news.xml
+++ b/app/src/main/res/layout/list_news.xml
@@ -18,7 +18,7 @@
         android:alpha="0.8">
 
         <ImageView
-            android:contentDescription="@string/news_image"
+            android:contentDescription=""
             android:id="@+id/list_news_photo"
             android:layout_width="104dp"
             android:layout_height="104dp"
@@ -31,7 +31,7 @@
             android:layout_toEndOf="@id/list_news_photo"
             android:layout_alignParentTop="true"
             android:textSize="18sp"
-            android:text="@string/abstract_lorem"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
